--- a/template/default/component/c_fli_fastreply.htm
+++ b/template/default/component/c_fli_fastreply.htm
@@ -6,7 +6,7 @@
 			<input type="hidden" name="formhash" value="{FORMHASH}" />
 			<div id="vfastposttb">
 				<span class="c-fli-fastreply-txt"><input class="u-form-txt" type="text" name="message" id="vmessage" onKeyDown="seditor_ctlent(event, '$(\'vfastpostform\').submit()');"/></span>
-				<span class="c-fli-fastreply-btn"><button class="u-form-button" type="submit" name="replysubmit" id="vreplysubmit" value="true" style="">发送</button></span>
+				<button class="c-fli-fastreply-btn u-form-button" type="submit" name="replysubmit" id="vreplysubmit" value="true" style="">发送</button>
 				<!--{if !$_G[uid]}-->
 					<a class="c-fli-fastreply-logintips" href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]" onclick="showWindow('login', this.href)"><span>请先登录</span></a>
 				<!--{/if}-->
