--- a/css/pvx/pvx-mix.less
+++ b/css/pvx/pvx-mix.less
@@ -2,10 +2,11 @@
 @import url('../global/var.less');			//常量
 @import url('../global/color.less');		//配色
 
-.u-lastedit{
+.c-flist .u-lastedit{
 	background-color:#EEFDFF !important;
 	color:#28B3C5 !important;
 }
+
 
 .m-mix-post-tips{
 	background-color:#f5f5f5;
