--- a/css/common/i-header/all.less
+++ b/css/common/i-header/all.less
@@ -68,7 +68,7 @@
 			.dbi;.y;.size(32px,24px);
 			background:~"url('@{url}forum/post.svg') no-repeat 0 0 / auto 100%";
 		}
-		span{.none;}
+		//span{.none;}
 		background: none;
 		border:none;
 		box-shadow:none;
