--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -38,6 +38,10 @@ body{
 	.ua-responsive .wp{
 		.w(960px);
 	}
+	//固定为1180px的老页面
+	.ua-oldpc .wp{
+		.w(1180px) !important;
+	}
 	//平板竖屏&手机版
 	.ua-responsive .screen-m,.ua-responsive .screen-s{
 		.wp{
