--- a/css/widget/w-route.less
+++ b/css/widget/w-route.less
@@ -4,7 +4,12 @@
 	padding: 5px 0;
     border-bottom: 1px dotted #ddd;
     .lh(29px);
-    .nobreak;
+    .pr;
+
+    .z{
+		.nobreak;
+    	max-width:80%;
+    }
 }
 .ua-responsive .screen-s #pt{
 	.none;
