--- a/template/about/portal/portal_topic_search.htm
+++ b/template/about/portal/portal_topic_search.htm
@@ -1,7 +1,21 @@
 <!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://test.jx3pve.com/css/system/search.css" type="text/css" />
 <div class="search-container">
+
 	<iframe class="iframe-search" id="iframe-search" src="http://search.jx3pve.com/cse/search?q=%E5%89%91%E7%BD%913&s=16227720870024914123" frameborder="0"></iframe>
+
+	<!--这是百度提供的那段js-->
+	<!--<div id="bdcs-frame-box"></div>
+	<script type="text/javascript">
+	var bdcsFrameSid="16227720870024914123";
+	var bdcsFrameWidth = 552;
+	var bdcsFrameWt = 1;
+	var bdcsFrameHt = 1;
+	var bdcsFrameResultNum = 10;
+	var bdcsFrameBgColor = "#ffffff";
+	</script>
+	<script type="text/javascript" src="http://zhannei.baidu.com/static/js/iframe.js"></script>-->
+
 </div>
-<script src="http://test.jx3pve.com/js/page/page-search.js"></script>
+<script src="http://test.jx3pve.com/js/page/page-search.min.js"></script>
 <!--{subtemplate common/footer}-->
