--- a/template/default/forum/列表页/forumdisplay_header.htm
+++ b/template/default/forum/列表页/forumdisplay_header.htm
@@ -1,5 +1,5 @@
 <header class="i-header i-header-list">
-	<a class="i-header-back" href="./sitemap"><i></i><span></span></a>
+	<a class="i-header-back" href="./"><i></i><span></span></a>
 	<div class="i-header-title">$_G['forum'][name]</div>
 	<div class="i-header-menu">
 		<!-- 发布帖子 -->
@@ -16,8 +16,8 @@
 			<div class="z">
 				<a href="./" class="nvhm" title="{lang homepage}">$_G['setting']['bbname']</a> 
 				$navigation
-				
 			</div>
+			<!--{template widget/w_custom}-->
 		</div>
 
 		<div class="default-main">
