--- a/template/default/forum/单页/viewthread_header.htm
+++ b/template/default/forum/单页/viewthread_header.htm
@@ -42,6 +42,7 @@
 				$navigation
 				<em>&rsaquo;</em> <a href="forum.php?mod=viewthread&tid=$_G[tid]">$_G[forum_thread][short_subject]</a>
 			</div>
+			<!--{template widget/w_custom}-->
 		</div>
 
 		<div class="default-main">
