--- a/css/widget/widget.less
+++ b/css/widget/widget.less
@@ -11,3 +11,4 @@
 @import url('w-dialog.less');		//dz默认弹层
 @import url('w-gotofloor.less');		//跳转楼层
 @import url('w-listfilter.less');		//列表排序过滤等
+@import url('w-custom.less');		//自定义界面
