Signed-off-by: unknown <17229398@qq.com>

--- a/css/user/guide.less
+++ b/css/user/guide.less
@@ -1,3 +1,7 @@
+@import url('../public/base.less');		//函数
+@import url('../global/color.less');	//配色
+@import url('../global/var.less');		//尺寸
+
 /*.pg_guide{
 	#fwin_nav{
 		#postbtn.xg1{
@@ -14,8 +18,8 @@
 		.r(24px);
 	}
 }
-
-.user-guide-main{
+*/
+/*.user-guide-main{
 	.w(@wp);.auto(x);
 
 	.user-guide-content{
@@ -32,8 +36,6 @@
 	#threadlist{
 	}
 }
-
-
 
 .user-guide-content{
 
