--- a/css/common/i-header/all.less
+++ b/css/common/i-header/all.less
@@ -22,7 +22,7 @@
 		border-width: 2px 0 0 2px;
 		width: 10px;
 		height: 10px;
-		margin: -5px 0 0 0;
+		margin: 0 0 -2px 0;
 		transform: scale(1) rotate(-50deg) skew(-10deg) translateZ(0);
 	}
 	span{
