--- a/css/global/font.less
+++ b/css/global/font.less
@@ -1,6 +1,9 @@
+html{
+    font-size:13px;
+}
 body{
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
-    font-size: 13px;
+    font-size:1rem;
     line-height: 2;
     word-wrap: break-word;
     color: #222;
