一键复制 & 筛选组件移动适配版 & 其它修订

--- a/css/system/faq.less
+++ b/css/system/faq.less
@@ -25,7 +25,7 @@
 }
 
 .m-faq-search{
-	.pa;.rt(0,3px);
+	.pa;.rt(0,3px);.z(2);
 	.mtn{margin-top:0 !important;} //reset dz default 
 	.px{
 		.fzlh(12px,28px);
@@ -35,6 +35,7 @@
 		*margin-right:5px;
 		//padding:2px 4px;
 		.w(180px);
+		padding:0 10px;
 		margin-top:1px;
 	}
 	.pn{
