--- a/css/widget/w-filter.less
+++ b/css/widget/w-filter.less
@@ -16,6 +16,10 @@
 	.w-listfilter{
 	}
 
+	.w-listfilter-list{
+		overflow:visible;
+	}
+
 	.til{
 	}
 	.item{
@@ -70,4 +74,12 @@
 //表单类型总是放在侧边栏
 .w-filter-form{
 	.none;
+}
+
+.ua-responsive .screen-s{
+	.w-filter-box{.ps;}
+	.w-filter-font .label{
+		line-height:26px;
+		&.on{background-color:#fff;}
+	}
 }
