--- a/template/default/forum/列表页/forumdisplay.htm
+++ b/template/default/forum/列表页/forumdisplay.htm
@@ -262,14 +262,18 @@
 				<!-- jx3pve:w-pages-top -->
 				<!--{subtemplate widget/w_pages_top_list}-->
 
-				<!-- jx3pve:w-category -->
-				<!--{subtemplate widget/w_category}-->
+				<div class="w-listmode">
 
-				<!-- jx3pve:w-order -->
-				<!--{subtemplate widget/w_order}-->
+					<!-- jx3pve:w-category -->
+					<!--{subtemplate widget/w_category}-->
 
-				<!-- jx3pve:w-filter -->
-				<!--{subtemplate widget/w_filter}-->
+					<!-- jx3pve:w-order -->
+					<!--{subtemplate widget/w_order}-->
+
+					<!-- jx3pve:w-filter -->
+					<!--{subtemplate widget/w_filter}-->
+
+				</div>
 
 				<!-- jx3pve:list loop -->
 				<!--{if empty($_G['forum']['sortmode'])}-->
