--- a/css/forum/forumdisplay/c-flist-item.less
+++ b/css/forum/forumdisplay/c-flist-item.less
@@ -79,6 +79,8 @@
 		    cursor: pointer;
 		    overflow: hidden;
 		    margin: 5px 5px 0px 5px;
+		    border:none;
+		    padding:0;
 		    &:hover{
 		    	background-position: 0 -12px;
 		    }
