--- a/template/default/common/js.htm
+++ b/template/default/common/js.htm
@@ -1,4 +1,4 @@
-<!-- headjs -->
+<!-- lib -->
 <script>
 	var head_conf = {
 			head:'H',
@@ -7,10 +7,7 @@
 		}
 </script>
 <script src="http://js.jx3pve.com/js/lib/head.min.js"></script>
-<!-- jquery -->
 <script src="http://js.jx3pve.com/js/lib/jquery-1-10-2.min.js"></script>
 <!-- load modules -->
-<script src="http://js.jx3pve.com/js/init.min.js"></script>
 <script src="http://js.jx3pve.com/js/plugin/responsive.min.js"></script>
-<!-- sdk -->
-<script src="http://js.jx3pve.com/js/lib/wb.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="http://js.jx3pve.com/js/init.min.js"></script>
