--- a/css/forum/viewthread/c-fli-commend.less
+++ b/css/forum/viewthread/c-fli-commend.less
@@ -29,6 +29,7 @@
 	}
 	.u-zan{
 		i{background:url('@{url}forum/zan.png') no-repeat 0 0;margin-top:-2px;}
+		#recommendv_add{color:#999;}
 	}
 	.u-rate{
 		i{background:url('@{url}forum/fav2.png') no-repeat 0 0;margin-top:-3px;}
