--- a/template/default/common/wysiwyg.less
+++ b/template/default/common/wysiwyg.less
@@ -6,7 +6,7 @@
 
 body{background:#fff;min-height:400px;}
 
-a{text-decoration:none;}
+a{text-decoration:none;color:@blue-link;}
 a:hover{text-decoration:underline;}
 
 strong,b{.bold;}
