--- a/css/forum/layout.less
+++ b/css/forum/layout.less
@@ -1,15 +1,22 @@
+.jx3pve-container{
+	background-color:#f7f7f7;
+}
+
 .default-main{
 	.pr;
-	padding:10px 0;
 }
 
 .default-sidebar{
 	.pa;.lt(0,0);
 	.w(@sd);
+	padding:20px;
+	background-color:#fff;
 }
 
 .default-content{
-	margin-left:@sd + 20px;
+	margin-left:@sd + 20px*2 + 20px;
+	padding:20px;
+	background-color:#fff;
 }
 
 .ua-responsive .screen-s{
