--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -39,7 +39,7 @@ body{
 	}
 	//逐步上线新页面
 	.ua-responsive .wp{
-		.w(960px);
+		//.w(960px);
 	}
 	//固定为1180px的老页面
 	.ua-oldpc .wp{
@@ -51,12 +51,6 @@ body{
 			.w(auto);padding:0 10px;
 		}
 	}
-
-
-
-
-
-
 
 //old 
 .col2-ct {
