--- a/css/widget/w-custom.less
+++ b/css/widget/w-custom.less
@@ -1,5 +1,5 @@
 .w-custom{//.none;
-	background-color:#fff;
+	//background-color:#fff;
 	.pa;.rt(0,0);
 	line-height:29px;
 	padding:5px 5px 3px 20px;
