--- a/css/common/c-rate.less
+++ b/css/common/c-rate.less
@@ -41,6 +41,11 @@
 		.lh(32px);
 	}
 
+	.reasonselect{
+		padding:0 10px;
+		//box-sizing:border-box;
+	}
+
 	.px{
 		padding:0 10px;
 		//border-right:none;
