--- a/template/default/forum/单页/rate.htm
+++ b/template/default/forum/单页/rate.htm
@@ -26,7 +26,7 @@
 		<div class="c">
 			<table cellspacing="0" cellpadding="0" class="dt mbm">
 				<tr>
-					<th>&nbsp;</th>
+					<th width="38">&nbsp;</th>
 					<th width="65">&nbsp;</th>
 					<th width="65">{lang rate_raterange}</th>
 					<th width="55">{lang rate_todayleft}</th>
@@ -46,7 +46,6 @@
 					</tr>
 				<!--{/loop}-->
 			</table>
-			<script src="http://js.jx3pve.com/js/mod/rate.min.js" type="text/javascript" charset="utf-8"></script>
 			<div class="tpclg">
 				<h4>{lang user_operation_explain}:</h4>
 				<table cellspacing="0" cellpadding="0" class="reason_slct">
