--- a/template/default/forum/单页/viewthread_node_body.htm
+++ b/template/default/forum/单页/viewthread_node_body.htm
@@ -246,7 +246,7 @@
 							</tbody>
 						</table>
 						<p class="ratc">
-							<a href="forum.php?mod=misc&action=viewratings&tid=$_G[tid]&pid=$post[pid]" onclick="showWindow('viewratings', this.href)" title="{lang rate_view}" class="xi2 u-mask-tg">{lang rate_view}</a>
+							<a href="forum.php?mod=misc&action=viewratings&tid=$_G[tid]&pid=$post[pid]" onclick="showWindow('viewratings', this.href)" title="{lang rate_view}" class="xi2">{lang rate_view}</a>
 						</p>
 					<!--{else}-->
 						<ul class="cl">
