--- a/css/forum/layout.less
+++ b/css/forum/layout.less
@@ -1,31 +1,38 @@
-.jx3pve-container{
+.listpage-container,.viewpage-container,.postpage-container{
 	background-color:#f7f7f7;
 }
 
 .default-main{
 	.pr;
+	padding:10px 0 20px 0;
 }
 
 .default-sidebar{
-	.pa;.lt(0,0);
+	.pa;.lt(0,10px);
 	.w(@sd);
 	padding:20px;
 	background-color:#fff;
+	.r(4px);
 }
 
 .default-content{
 	margin-left:@sd + 20px*2 + 20px;
-	padding:20px;
+	padding:20px 20px 10px 20px;
 	background-color:#fff;
+	.r(4px);
 }
 
 .ua-responsive .screen-s{
+	.listpage-container,.viewpage-container,.postpage-container{
+		background-color:#fff;
+	}
 	.default-sidebar{
 		//.pf;.lt(0,90px);
 		.none;
 	}
 	.default-content{
 		margin-left:0;
+		padding:0;
 	}
 }
 
