--- a/css/widget/w-route.less
+++ b/css/widget/w-route.less
@@ -3,7 +3,7 @@
 	border:none;
 	padding: 5px 0;
     border-bottom: 1px dotted #ddd;
-    margin-bottom:10px;
+    //margin-bottom:10px;
     .lh(29px);
     .pr;
 
