修复与优化。

--- a/css/common/i-footer/all.less
+++ b/css/common/i-footer/all.less
@@ -4,7 +4,7 @@
 	.h(@c-footer-height);
 	border-top:1px solid #ddd;
 	overflow:hidden;
-	box-shadow:0 -1px 1px #eee;
+	box-shadow:0 0 1px #eee;
 
 	ul{
 		padding-top:4px;
