--- a/css/system/faq.less
+++ b/css/system/faq.less
@@ -2,9 +2,13 @@
 @import url('../global/color.less');	//配色
 @import url('../global/var.less');		//尺寸
 
-.wp{
-	.w(@wp);
+.faq-container{
+	min-height:400px;
 }
+.ua-responsive .screen-s .faq-container{
+	min-height:auto;
+}
+
 .faq-container .wp{
 	.pr;
 }
