--- a/css/ui/ui.less
+++ b/css/ui/ui.less
@@ -9,6 +9,7 @@
 @import url('tips.less');			//提示文字样式
 @import url('warning.less');		//警告
 @import url('img.less');			//图片
+@import url('other.less');			//其他
 
 
 .alertHTML .p_pop{
