--- a/css/widget/w-custom.less
+++ b/css/widget/w-custom.less
@@ -23,6 +23,7 @@
 .w-custom-mywork{
 	.fl;margin-right:10px;
 	i{.dbi;.y;.size(14px);background:url('@{url}header/icons.png') no-repeat -62px 0;}
+	.none;
 }
 .w-custom-fav{
 	.fl;
