--- a/css/widget/w-gotofloor.less
+++ b/css/widget/w-gotofloor.less
@@ -3,14 +3,22 @@
 	.clearfix;
 	border-right: 1px dashed #ddd;
     margin-right: 10px;
-	.z{margin-right:10px;line-height:24px;}
-	label{color:#888;}
-	.px{
-		.w(40px);padding:0 5px;
-	}
+	.z{margin-right:10px;}
 }
-.w-gotofloor-box{
+.w-gotofloor-box#fj{
 	.clearfix;
+
+	.u-font{
+		color:#888;.lh(26px,26px);
+	}
+	.u-go{
+		.lh(26px);padding:0 10px;
+		img{margin-top:-1px;}
+	}
+	.u-floor{
+		.size(70px,24px);padding:0 5px;.fl;
+		.u-text{.w(50px) !important;.h(24px) !important;padding:0 10px;}
+	}
 }
 
 .ua-responsive .screen-s .w-pages-bottom{
@@ -20,14 +28,10 @@
 	.w-gotofloor{
 		border:none;
 		margin-right:0;
+		background-color: #f7f7f7;
+    	padding: 5px 0;
 	}
 	.w-gotofloor-box{
-		.x(right);
-		.z{float:none;.y;}
+		.fr;
 	}
-}
-
-#fj label, #fj input{
-	.lh(24px);
-	margin-right:10px;
 }
