--- a/css/forum/forumdisplay/c-flist-list.less
+++ b/css/forum/forumdisplay/c-flist-list.less
@@ -6,7 +6,7 @@
 		.clearfix;
 		li{
 			&.update{
-				.fl;.w(110px);.x;
+				.fl;.w(90px);.x;
 				.color-tips{
 					background:url('@{url}icon/faq.gif') no-repeat 0 0;
 					.dbi;.size(13px);.y(-2px);margin-left:3px;
@@ -21,6 +21,10 @@
 			}
 		}
 	}
+}
+
+.ua-responsive .screen-s{
+	.c-flist-info ul li.author{.none;}
 }
 
 .c-flist-list{
