--- a/css/forum/post/c-post-body.less
+++ b/css/forum/post/c-post-body.less
@@ -46,10 +46,11 @@ body .edt{
 
 //弹层位置
 .postpage-container{
-	//@与视频
-	//.p_pof.upf{margin-top:-200px;margin-left:-200px;}
-	//字体
-	//.p_pop.fnm,.p_pop.fszm{margin-top:-200px;margin-left:-150px;}
+	//字体、字体大小
+	.p_pop.fnm,.p_pop.fszm,
+	//表格+视频+@朋友+引用+代码+免费+加锁+密码+链接
+	.p_pof.upf{margin-top:-175px;margin-left:-360px;}
+	//表情，颜色，水平线，背景图 正常
 }
 
 .c-post-remember{
