--- a/css/global/font.less
+++ b/css/global/font.less
@@ -1,9 +1,9 @@
-html{
+html.desktop{
     font-size:13px;
 }
 body{
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
-    font-size:1rem;
+    font-size:13px;
     line-height: 2;
     word-wrap: break-word;
     color: #222;
