--- a/template/default/widget/w_pages_bottom_view.htm
+++ b/template/default/widget/w_pages_bottom_view.htm
@@ -15,9 +15,13 @@
 	<div class="w-pages-list pgt">$multipage</div>
 	<div class="w-gotofloor" id="w-gotofloor">
 		<div class="w-gotofloor-box" id="fj">
-			<label class="z">跳转楼层</label>
-			<input type="text" class="px p_fre z" size="2" onkeyup="$('fj_btn').href='forum.php?mod=redirect&ptid=$_G[tid]&authorid=$_GET[authorid]&postno='+this.value" onkeydown="if(event.keyCode==13) {window.location=$('fj_btn').href;return false;}" title="{lang thread_redirect_postno_tips}" />
-			<a href="javascript:;" id="fj_btn" class="z" title="{lang thread_redirect_postno_tips}"><img src="{IMGDIR}/fj_btn.png" alt="{lang thread_redirect_postno_tips}" class="vm" /></a>
+			<label class="u-font z">跳转楼层</label>
+			<span class="u-floor">
+				<input type="text" class="u-text px p_fre z" size="2" onkeyup="$('fj_btn').href='forum.php?mod=redirect&ptid=$_G[tid]&authorid=$_GET[authorid]&postno='+this.value" onkeydown="if(event.keyCode==13) {window.location=$('fj_btn').href;return false;}" title="{lang thread_redirect_postno_tips}" />
+			</span>
+			<a class="u-go z"  href="javascript:;" id="fj_btn" title="{lang thread_redirect_postno_tips}">
+				<img src="{IMGDIR}/fj_btn.png" alt="{lang thread_redirect_postno_tips}" class="vm" />
+			</a>
 		</div>
 	</div>
 </div>
