Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/template/about/portal/portal_topic_copyright.htm
+++ b/template/about/portal/portal_topic_copyright.htm
@@ -1,6 +1,6 @@
 <!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/about/about.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/system/about.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
 	<div class="i-header-title">版权声明</div>
