--- a/template/default/component/c_fli_header.htm
+++ b/template/default/component/c_fli_header.htm
@@ -7,7 +7,7 @@
 	<!--{elseif $post['authorid'] && $post['username'] && $post['anonymous']}-->
 		<!--{if $_G['forum']['ismoderator']}--><a class="u-avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a><!--{else}--><a class="u-avatar" href="javascript:;" style="cursor:default;"><img src="http://img.jx3pve.com/img/common/anonymous.png" alt="未知剑三玩家"/></a><!--{/if}-->
 	<!--{else}-->
-		<a class="u-avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank"><!--{avatar($post[authorid],small)}--></a>
+		<a class="u-avatar" href="home.php?mod=space&uid=$post[authorid]" target="_blank" c="1"><!--{avatar($post[authorid],small)}--></a>
 	<!--{/if}-->
 	
 
@@ -19,7 +19,7 @@
 			<!--{elseif $post['authorid'] && $post['username'] && $post['anonymous']}-->
 				<!--{if $_G['forum']['ismoderator']}--><a class="u-username" href="home.php?mod=space&uid=$post[authorid]" target="_blank">$_G[setting][anonymoustext]</a><!--{else}-->$_G[setting][anonymoustext]<!--{/if}-->
 			<!--{else}-->
-				<a class="u-username" href="home.php?mod=space&uid=$post[authorid]" target="_blank" {if $post[groupcolor]} style="color: $post[groupcolor]"{/if}>$post[author]</a>
+				<a class="u-username" href="home.php?mod=space&uid=$post[authorid]" target="_blank" c="1" {if $post[groupcolor]} style="color: $post[groupcolor]"{/if}>$post[author]</a>
 			<!--{/if}-->
 
 			<!-- 如果是楼主自己 -->
